testing/Travis/testcases/Check/ShouldFail/NamespaceRule.adl
CONTEXT Bug IN ENGLISH

PATTERN Developer
RULE "Trivi_ality" : I[ONE] = I[ONE]
ENDPATTERN

ENDCONTEXT

{- The name of a rule is not a proper name. It is quoted. -}